--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "lobes",
   "version": "0.3.0",
   "devDependencies": {
+    "assemble": "~0.4.4",
+    "bower": "~1.1.0",
     "grunt": "~0.4.1",
-    "grunt-contrib-less": "~0.6.4",
-    "grunt-contrib-watch": "~0.4.4",
-    "grunt-contrib-cssmin": "~0.6.1",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-text-replace": "~0.3.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-connect": "~0.3.0",
-    "bower": "~1.1.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-cssmin": "~0.6.1",
+    "grunt-contrib-less": "~0.6.4",
+    "grunt-contrib-watch": "~0.4.4",
     "grunt-recess": "~0.3.5",
-    "assemble": "~0.4.4"
+    "grunt-text-replace": "~0.3.2",
+    "less-plugin-autoprefix": "^1.4.1"
   }
 }
