--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "author": "Ben Ockmore",
   "name": "lobes4",
   "description": "Lobes 4 is a Bootstrap 4 theme developed by Monkey.Do and Ben Ockmore for MetaBrainz",
-  "version": "4.0.0",
-  "dependencies": {
+  "version": "4.0.1",
+  "devDependencies": {
     "bootstrap": "^4.6.1",
     "sass": "^1.49.0"
+  },
+  "peerDependencies": {
+    "bootstrap": "^4.0.0"
   },
   "scripts": {
     "prepare": "sass scss/bootstrap.scss:dist/css/bootstrap.css -I ./node_modules",
